--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,11 @@ dmypy.json
 .pyre/
 
 setup.py
+setup_en.py
 
 # End of https://www.gitignore.io/api/python
 *.txt
 *.pyw
+Updater.py
+steamswitcher_ttk_kr_autoupdateexperiment.py
+setup_updater.py
