--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,10 @@ dmypy.json
 setup.py
 
 # End of https://www.gitignore.io/api/python
+Updater.py
+steamswitcher_ttk_kr_autoupdateexperiment.py
+accounts.txt
+setup_en.py
+setup_updater.py
+steamswitcher_ttk_en.pyw
+steamswitcher_ttk_kr.pyw
