--- a/version.yml
+++ b/version.yml
@@ -1,5 +1,8 @@
 version: 1.7.2
 changelog_en: |
+  PSA: If download takes too long, download directly from GitHub.
+  https://github.com/sw2719/steam-account-switcher/releases
+  
   ----------1.7.2----------
 
   • Added displaying important message capability.
@@ -25,6 +28,9 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
+  알림: 다운로드가 너무 오래 걸릴 경우, GitHub에서 직접 다운로드하세요.
+  https://github.com/sw2719/steam-account-switcher/releases
+
   ----------1.7.2----------
 
   • 중요 메시지 표시 기능을 추가하였습니다.
