--- a/version.yml
+++ b/version.yml
@@ -6,7 +6,7 @@ changelog_en: |
 
   • Added real-time download speed calculation.
 
-  • Added an icon to excutable.
+  • Added an icon to executable.
 
   ----------1.7.2----------
 
