--- a/version.yml
+++ b/version.yml
@@ -1,6 +1,6 @@
 version: 1.7.3
 changelog_en: |
-  PSA: If download takes too long, download directly from GitHub - https://github.com/sw2719/steam-account-switcher/releases
+  PSA: If download takes too long, download manually from GitHub - https://github.com/sw2719/steam-account-switcher/releases
 
   ----------1.7.3----------
 
