--- a/version.yml
+++ b/version.yml
@@ -1,6 +1,13 @@
 version: 1.7.3
 changelog_en: |
   PSA: If download takes too long, download manually from GitHub - https://github.com/sw2719/steam-account-switcher/releases
+  ----------1.8----------
+
+  • Added custom name functionality.
+
+  • Added foundation for more features.
+
+  • Fixed some unicode bugs.
 
   ----------1.7.3----------
 
@@ -35,33 +42,41 @@ changelog_en: |
 changelog_ko: |
   알림: 다운로드가 너무 오래 걸릴 경우, GitHub에서 직접 다운로드하세요 - https://github.com/sw2719/steam-account-switcher/releases
 
+  ----------1.8----------
+
+  • 커스텀 이름 기능 추가
+
+  • 추후 업데이트 준비
+
+  • 유니코드 버그 수정
+
   ----------1.7.3----------
 
-  • 실시간 다운로드 속도 계산을 추가하였습니다.
+  • 실시간 다운로드 속도 계산 추가
 
-  • 실행 파일에 아이콘을 추가하였습니다.
+  • 실행 파일에 아이콘 추가
 
   ----------1.7.2----------
 
-  • 중요 메시지 표시 기능을 추가하였습니다.
+  • 중요 메시지 표시 기능 추가
 
   ----------1.7.1----------
 
-  • 몇몇 버그를 수정하였습니다.
+  • 몇몇 버그 수정
 
-  • 업데이트 다운로드를 최적화하였습니다.
+  • 업데이트 다운로드 최적화
 
-  • 업데이트 다운로드 진행 상황을 표시하는 진행 막대를 추가하였습니다.
+  • 업데이트 다운로드 진행 막대 추가
 
   ----------1.7----------
 
-  • 프로필 이름에 유니코드 문자가 포함돼있을 경우 앱이 종료되던 현상을 수정하였습니다.
+  • 프로필 이름에 유니코드 문자가 포함돼있을 경우 앱이 종료되던 현상 수정
 
-  • 업데이트 UI가 변경되었습니다.
+  • 업데이트 UI 변경
 
-  • 자동 업데이트 구현 방식을 변경하였습니다.
+  • 자동 업데이트 구현 방식 변경
 
-  • 프로필 이름이 표시되는 방법을 변경하였습니다.
+  • 프로필 이름 표시 방법 변경
 
-  • 설정에서 스팀 재시작후 앱이 종료되지 않도록 변경할 수 있습니다.
+  • 설정에서 스팀 재시작후 앱이 종료되지 않도록 변경 가능
 msg:
