--- a/version.yml
+++ b/version.yml
@@ -1,6 +1,18 @@
-version: 2.0
+version: 2.1
 changelog_en: |
   PSA: If download takes too long, download manually from GitHub - https://github.com/sw2719/steam-account-switcher/releases
+
+  ----------2.1----------
+
+  • Added autologin refreshing.
+  You can use autologin refreshing to prevent your autologin token from expiring for not logging in for a while.
+  It cycles through every account you selected, without any user interaction required.
+
+  • Added French Language. (Thanks to QuentiumYT)
+
+  • Added Korean mirror server for downloading update. If you are in Asia, you might get good speed with it.
+
+  • Added new Steam process checker.
 
   ----------2.0----------
 
@@ -71,6 +83,18 @@ changelog_en: |
 
 changelog_ko: |
   알림: 다운로드가 너무 오래 걸릴 경우, GitHub에서 수동으로 다운로드하세요 - https://github.com/sw2719/steam-account-switcher/releases
+
+  ----------2.1----------
+
+  • 자동로그인 새로고침을 추가했습니다.
+  자동로그인 새로고침을 사용하면 오랫동안 로그인하지 않아 자동로그인 토큰이 만료되는 일을 방지할 수 있습니다.
+  아무 것도 할 필요 없이 선택한 모든 계정에 한 번씩 로그인되므로 편리합니다.
+
+  • 프랑스어를 추가했습니다. (Thanks to QuentiumYT)
+
+  • 한국 업데이트 미러 서버를 추가했습니다. GitHub 서버가 느리다면 사용해보세요.
+
+  • 새로운 프로세스 체커를 추가했습니다.
 
   ----------2.0----------
 
