--- a/version.yml
+++ b/version.yml
@@ -127,7 +127,7 @@ changelog_ko: |
 
   ----------2.3.1----------
 
-  • 라벨에 클릭했을 때, 커서를 밖으로 움직여도 버튼이 선택되있던 버그를 수정하였습니다. (#27)
+  • 버튼의 텍스트 부분에 클릭했을 때, 커서를 밖으로 움직여도 버튼이 선택되있던 버그를 수정하였습니다. (#27)
 
   • 선택 색상을 더 눈에 띄게 수정하였습니다.
 
