Implement basic avatar display capability

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
+avatar/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
