--- a/version.yml
+++ b/version.yml
@@ -8,11 +8,33 @@ changelog_en: |
 
   • Now user can attempt to check for updates again when error has occured.
 
-  • Use system font for profile names / custom names
+  • Now uses system font for profile names / custom names.
 
-  • Show update status message only if error has occured or update is available for cleaner menu.
+  • Now update status message is shown only when error has occured or update is available for cleaner menu.
 
-  • A few UI string changes
+  • Added SteamID conversion.
+
+  • Added opening screenshots directory.
+
+  • Shows avatars in account list.
+
+  • Added totally new initial setup experience.
+
+  • Added capability to save log (stdout, stderr) to file with -logfile argument..
+
+  • Implemented chunked downloading to download update faster.
+
+  • Removed mirror downloading as chunked downloading is introduced.
+
+  • Fixed UI issues with Segoe UI.
+
+  • Updated French translation.
+
+  • Now Steam restart is much faster.
+
+  • Now saves windows position on exit and use that position on startup.
+
+  • Now all windows show up right on the main window.
 
   ----------2.3.3----------
 
@@ -147,15 +169,37 @@ changelog_ko: |
 
   ----------2.4----------
 
-  • 이제 우클릭 메뉴로 그 계정의 프로필을 열 수 있습니다.
+  • 우클릭 메뉴로 스팀 프로필을 열 수 있습니다.
 
-  • 이제 업데이트 확인 중 오류가 발생할 경우 다시 시도가 가능합니다.
+  • 업데이트 확인 중 오류가 발생할경우 재시도가 가능합니다.
 
-  • 프로필 이름 / 커스텀 이름을 표시하는데 시스템 글꼴을 사용합니다.
+  • 프로필 이름/사용자 이름 표시에 시스템 글꼴을 사용합니다.
 
-  • 깔끔한 UI를 위해 업데이트 확인 중 오류가 발생했거나 업데이트가 있는 경우에만 메시지가 표시됩니다.
+  • 이제 업데이트 확인 중 오류가 발생했거나 업데이트가 있는 경우에만 업데이트 UI가 하단에 표시됩니다.
 
-  • 몇몇 UI 문자열이 수정되었습니다.
+  • SteamID 변환 기능을 추가했습니다.
+
+  • 해당 계정의 스크린샷 폴더를 여는 기능을 추가했습니다.
+
+  • 이제 계정 목록에 프로필 사진을 표시할 수 있습니다.
+
+  • 완전히 새로운 초기 설정 경험을 추가했습니다.
+
+  • -logfile 실행 인자로 로그를 기록할 수 있습니다.
+
+  • 업데이트를 빠르게 내려받기 위해 분할 다운로드를 추가했습니다.
+
+  • 미러 다운로드가 삭제되었습니다.
+
+  • Segoe UI를 사용하는 언어에서 발생하는 UI 문제를 수정하였습니다.
+
+  • 프랑스어 번역을 업데이트했습니다.
+
+  • Steam 재시작 속도를 크게 개선했습니다.
+
+  • 프로그램 종료시 창 위치가 저장되어 다음 실행시 위치가 유지됩니다.
+
+  • 이제 모든 창이 메인 창과 같은 위치에 나타납니다.
 
   ----------2.3.3----------
 
