--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 
+avatar/
+asset/
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
