--- a/version.yml
+++ b/version.yml
@@ -1,6 +1,13 @@
-version: '2.4'
+version: '2.4.1'
 changelog_en: |
-  PSA: If download takes too long, download manually from GitHub - https://github.com/sw2719/steam-account-switcher/releases
+
+  ----------2.4.1----------
+
+  • Reduced application size by about 40MB.
+
+  • New window now opens near the top center of the main window instead of upper left corner.
+
+  • Added copyright notice in about menu.
 
   ----------2.4----------
 
@@ -165,7 +172,14 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
-  알림: 미러를 사용하지 않을 때 다운로드가 너무 오래 걸릴 경우, GitHub에서 수동으로 다운로드하세요 - https://github.com/sw2719/steam-account-switcher/releases
+
+  ----------2.4.1----------
+
+  • 앱 전체 크기를 40MB 가량 줄였습니다.
+
+  • 이제 새 창이 주 창의 왼쪽 위 구석 대신 위쪽 중앙에 나타납니다.
+
+  • 정보 메뉴에 저작권 표기를 추가했습니다.
 
   ----------2.4----------
 
@@ -327,8 +341,7 @@ changelog_ko: |
   • 프로필 이름 표시 방법 변경
 
   • 설정에서 스팀 재시작후 앱이 종료되지 않도록 변경 가능
-mirror_url: http://sw2719.synology.me/mirror.yml
-mirror_baseurl: http://sw2719.synology.me/
+
 msg:
   '2.2':
     ko:
