--- a/version.yml
+++ b/version.yml
@@ -191,6 +191,8 @@ changelog_ko: |
 
   • 초기 설정에서 바탕화면에 바로가기를 추가하는 옵션을 추가했습니다.
 
+  • 이제 메뉴의 항목이 맑은고딕으로 표시됩니다.
+
   ----------2.4.1----------
 
   • 앱 전체 크기를 40MB 가량 줄였습니다.
