--- a/version.yml
+++ b/version.yml
@@ -1,5 +1,15 @@
-version: '2.4.2'
+version: '2.5'
 changelog_en: |
+  ----------2.5----------
+
+  • Added grid layout main UI. Go to settings to change between two layouts.
+
+  • Added smooth color transition.
+
+  • Main UI looks a lot cleaner now.
+
+  • Tweaked initial setup.
+
   ----------2.4.2----------
 
   • Fixed updater which could show 'Running updater without main app not supported.'
@@ -181,6 +191,16 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
+  ----------2.5----------
+
+  • 새로운 그리드 메인 레이웃을 추가했습니다. 설정에서 바꿀 수 있습니다.
+
+  • 부드러운 색상 전환을 추가했습니다.
+
+  • 메인 UI를 더 깔끔하게 수정했습니다.
+
+  • 초기 설정 경험을 향상했습니다.
+
   ----------2.4.2----------
 
   • 업데이터가 'Running updater without main app not supported.'를 표시할 수 있었던 문제를 수정했습니다.
