--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 # Edit at https://www.gitignore.io/?templates=python
 avatar/
 
-avatar/
-
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -143,3 +141,4 @@ messages.po
 updater/python37.dll
 updater/updater.exe
 setup_c.py
+.idea/
