--- a/version.yml
+++ b/version.yml
@@ -1,5 +1,11 @@
-version: '2.6'
+version: '2.6.1'
 changelog_en: |
+  ----------2.6.1----------
+
+  • Fixed issue which user couldn't create desktop shortcut in initial setup.
+
+  • Various minor improvements.
+
   ----------2.6----------
 
   • Added dark mode. (for main menu only)
@@ -208,6 +214,12 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
+  ----------2.6.1----------
+
+  • 초기 설정의 마지막 단계에서 바탕화면 바로가기를 만들 수 없었던 문제를 수정했습니다.
+
+  • 기타 여러 부분을 향상했습니다.
+
   ----------2.6----------
 
   • 다크 모드를 추가했습니다. (메인 메뉴 전용)
