--- a/version.yml
+++ b/version.yml
@@ -1,5 +1,11 @@
 version: '2.7'
 changelog_en: |
+  ----------2.7.1----------
+  
+  • Fixed error when downloading avatars.
+  
+  • Fixed update UI using wrong color values.
+  
   ----------2.7----------
 
   • Added error message for unhandled exceptions.
@@ -222,6 +228,12 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
+  ----------2.7.1----------
+  
+  • 프로필 사진을 다운로드 할때 발생하던 오류를 수정했습니다.
+  
+  • 업데이트 UI가 잘못된 색상을 사용하던 문제를 수정했습니다.
+  
   ----------2.7----------
 
   • 처리되지 않은 예외에 대한 오류 메시지를 추가했습니다.
