--- a/version.yml
+++ b/version.yml
@@ -1,5 +1,23 @@
-version: '2.8'
+version: '3.0'
 changelog_en: |
+  ----------3.0----------
+  
+  • Added password saving functionality.
+
+  • Added ability to encrypt accounts data.
+  
+  • Added ability to paste account password when restarting Steam if it's saved.
+  
+  • Fixed scaling issues on HiDPI enabled displays.
+  
+  • Switched from YAML to JSON for saving config and accounts data.
+  
+  • Now checks for update using GitHub API instead of fetching version.yml file.
+  
+  • Tweaked UI.
+  
+  • Updated initial setup.
+
   ----------2.8----------
 
   • Added app-wide light/dark theme.
@@ -238,6 +256,24 @@ changelog_en: |
   • Added a setting to choose whether app exits after restarting Steam or not.
 
 changelog_ko: |
+    ----------3.0----------
+  
+  • 비밀번호 저장 기능을 추가했습니다.
+
+  • 계정 데이터 암호화 기능을 추가했습니다.
+  
+  • 저장된 비밀번호가 있을 경우 Steam 재시작 시 붙여넣을 수 있습니다.
+  
+  • HiDPI 활성화 디스플레이에서 발생하던 문제를 수정했습니다.
+  
+  • 데이터 저장 방식을 YAML에서 JSON으로 변경했습니다.
+  
+  • 이제 업데이트를 확인할 때 version.yml 파일 대신 GitHub API를 사용합니다.
+  
+  • UI를 개선했습니다.
+  
+  • 초기 설정을 업데이트했습니다.
+
   ----------2.8----------
 
   • 앱 전반에 걸친 밝은/어두운 테마를 추가했습니다.
